--- a/DuplicateDetector.csproj
+++ b/DuplicateDetector.csproj
@@ -8,4 +8,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
+    <PackageReference Include="System.IO.Hashing" Version="9.0.9" />
+  </ItemGroup>
+
 </Project>
