--- a/DuplicateDetector.csproj
+++ b/DuplicateDetector.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
     <PackageReference Include="System.IO.Hashing" Version="9.0.9" />
+    <PackageReference Include="System.Management" Version="9.0.10" />
   </ItemGroup>
 
 </Project>
