--- a/DuplicateDetector.csproj
+++ b/DuplicateDetector.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
+    <PackageReference Include="Microsoft.Diagnostics.Tracing.TraceEvent" Version="3.1.28" />
     <PackageReference Include="System.IO.Hashing" Version="9.0.9" />
     <PackageReference Include="System.Management" Version="9.0.10" />
   </ItemGroup>
