--- a/App.config
+++ b/App.config
@@ -2,10 +2,34 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DuplicateDetector.Properties.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="DuplicateDetector.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <DuplicateDetector.Properties.UserSettings>
+            <setting name="HashingAlgorithm" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="FolderComparisonMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CompareSize" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CompareDateModified" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CompareFilename" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CompareContent" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CompareHash" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </DuplicateDetector.Properties.UserSettings>
         <DuplicateDetector.UserSettings>
             <setting name="HashingAlgorithm" serializeAs="String">
                 <value />
